force-app/main/default/objects/Surgeon_Exceptions__c/Surgeon_Exceptions__c.object-meta.xml
<CustomObject>
    <label>Surgeon Exceptions</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Surgeon Exceptions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surgeon Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>