force-app/main/default/objects/Surgeon_Exceptions__c/fields/Created_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created By Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>