force-app/main/default/objects/Surgeon_Exceptions__c/fields/SFDC_Surgeon_Id__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Surgeon_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SFDC Surgeon Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>