force-app/main/default/objects/Surgeon_Exceptions__c/fields/Zimmer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Zimmer_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zimmer Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>